---
source: src/reg_compiler/tests.rs
expression: bytecode
---
0 ; script
1 [   1]  Push           L15:  
2 [   1]  LoadImediate   r4[fn([nil], 0)] (local *3)  
3 ; imediate killed 5 for global *0
4 [   1]  MemCpy         (global *0)  r4[fn([nil], 0)] (1u)  
5 [   1]  Pop            
6 ; imediate killed 6 for global *0
7 [   0]  Move           r7[&fn([nil], 0)] (global *0)  
8 [   0]  Move           r8[fn([nil], 0)] r7[&fn([nil], 0)] 
9 [   0]  PreCall        r9[nil] r8[fn([nil], 0)] (0u)  
10 [   0]  Call           
11 [   0]  Halt           
12 ; anon0
13 ; imediate killed 1 for 2
14 [   1]  Return         (2)  (0u)  
15 ; main
16 [   1]  Push           L12:  
17 [   1]  LoadImediate   r2[fn([i64], 0)] (local *3)  
18 [   1]  Push           r0[nil] 
19 [   1]  LoadImediate   r3[*fn([i64], 0)] (local *3)  
20 [   1]  MemCpy         r3[*fn([i64], 0)] r2[fn([i64], 0)] (1u)  
21 [   1]  Return         r0[nil] (0u)
